    name into the module name.

    Updated the SWI-Prolog and YAP config files in order to preprocess the
    reexport/2 module directive, converting the module file name into the
    module name.

    Updated the SWI-Prolog config file with more robust and fast code for
    preprocessing module directives when the modules are already loaded.

    Updated the YAP config file in order to use the more standard predicate
    working_directory/2.

    Added support for parsing use_module/3 directives to the SICStus Prolog
    config files. Improved finding the module name from the module file name
    when preprocessing the directives use_module/1-2.

    Moved the "eclipse6.pl" config file to the "configs/unsupported" folder
    as Logtalk only supports ECLiPSe using the "eclipse6iso.pl" config file.
    Updated the "eclipse6iso.pl" config file with partial parsing solutions
    for some proprietary ECLiPSe directives.

    Updated the Qu-Prolog integration script, "qplgt.sh", in order to use
    larger memory values for the code and environment areas.

    Replaced the predicate as_dictionary/2 in the library object "bintree"
    with a new implementation, contributed by Paul Fodor, that returns a
    semi-balanced tree.

    Updated the "examples/tester.sh" script in order to report an error when
    the default Prolog back-end compiler is not found. Thanks to Parker Jones
    for the bug report. Updated the script to also report errors that are not
    written to standard error.

    Updated the "encodings" example unit test loader file to correctly detect
    back-end Prolog compilers supporting the encoding/1 directive. Added new
    test files for each supported text encoding.

    Fixed a typo that prevented running the "mtbatch" example using XSB as the
    back-end Prolog compiler. 

    Simplified the "cc" example when using SICStus Prolog 4.x as the back-end
    compiler by moving importing of the "system3" library shell/1-2 predicates